--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -82,24 +82,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "3747e551-00a0-4e63-974b-1af138589364",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'Dataframe'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataframe\u001b[49m(dataset\u001b[38;5;241m.\u001b[39mdata)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'Dataframe'"
-     ]
+     "data": {
+      "text/plain": [
+       "dict_keys(['ids', 'features', 'targets', 'original', 'headers'])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.Dataframe(dataset.data)"
+    "dataset.data.keys()"
    ]
   },
   {
